# ai-job-application-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  start-webui.bat  start-webui.ps1
backend/: __init__.py
backend/app/: __init__.py  api.py  cli.py  models.py  sample_profile.py
backend/app/parsers/: __init__.py  job_email_parser.py
backend/app/rag/: __init__.py  resume_index.py
backend/app/services/: __init__.py  application_analysis.py  application_tracker.py  browser_session.py  draft_generator.py  email_ingestion.py  imported_jobs.py  job_agent.py  job_url_reader.py  manual_job.py  matcher.py
backend/app/tools/: __init__.py  qq_mail_mcp_client.py
browser-extension/: README.md  background.js  manifest.json
data/sample_emails/: linkedin_job_alert.txt
docs/: QUICK_START_TUTORIAL.zh-en.md  USER_MANUAL.zh-en.md  architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
tests/: test_api_mail_preview.py  test_application_tracker.py  test_browser_session.py  test_draft_generator.py  test_email_ingestion.py  test_imported_jobs.py  test_job_agent.py  test_job_email_parser.py  test_job_url_reader.py  test_manual_job.py  test_matcher.py  test_resume_index.py
