[project]
name = "ai-job-application-agent"
version = "0.1.0"
description = "An AI-assisted job application workflow for parsing job emails and matching roles against a resume profile."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pypdf>=5.0.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
